--- a/.github/workflows/gitee-repos-sync.yml
+++ b/.github/workflows/gitee-repos-sync.yml
@@ -50,7 +50,7 @@ jobs:
         # 白名单，仅同步白名单中的repos，如“repo1,repo2,repo3”
         white_list: "holzora.github.io"
         # 仅同步静态列表，不会再动态获取需同步列表（黑白名单机制依旧生效）
-        static_list: "spark-example,gateway_proxy,go-eureka-client"
+        static_list: "holzora.github.io"
         # 强制更新
         force_update: true
         # clone方式，使用https、ssh方式进行clone
