--- a/.github/workflows/gitee-repos-sync.yml
+++ b/.github/workflows/gitee-repos-sync.yml
@@ -1,57 +1,49 @@
-########################################
-#
-#使用参考
-#https://zhuanlan.zhihu.com/p/102977226
-#http://yikun.github.io/2020/01/17/%E5%B7%A7%E7%94%A8Github-Action%E5%90%8C%E6%AD%A5%E4%BB%A3%E7%A0%81%E5%88%B0Gitee/
-#https://github.com/Yikun/hub-mirror-action/blob/master/README_CN.md
-#https://help.github.com/cn/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets
-#
-# 建议先在gitee上先导入github的项目，再编辑此文件增加同步功能。这样就能利用好gitee的强制同步功能了。
-########################################
-name: Gitee repos mirror periodic sync job
-
-on:
-  # push推送时触发
-  push:
-  # 定时任务触发
-  schedule:
-    # 每天北京时间9点跑
-    # Runs at 01:00 UTC (9:00 AM Beijing) every day
-    - cron:  '0 1 * * *'
-
+name: A TO A:GH_PAGES
+on: [push]
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Cache phpdragon src repos
-      # 引用发行版的主要版本
-      uses: actions/cache@v1
-      with:
-        path: /home/runner/work/phpdragon/phpdragon-cache
-        key: ${{ runner.os }}-phpdragon-repos-cache
+    - name: Checkout
+      uses: actions/checkout@master
 
-    - name: Mirror the Github organization repos to Gitee.
-      # 引用master分支的脚本支持
-      uses: phpdragon/hub-mirror-action@master
+    - name: Build and Deploy
+      uses: jenkey2011/vuepress-deploy@master
+      env:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        # 你要操作的目标仓库
+        TARGET_REPO: holzora/holzora.github.io
+        # 构建结果存储的分支
+        TARGET_BRANCH: master
+        # 要使用的构建命令
+        BUILD_SCRIPT: yarn && yarn build
+        # 构建结果存储目录
+        BUILD_DIR: docs/.vuepress/dist/
+  sync:
+    needs: build-and-deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: Sync to Gitee
+      uses: wearerequired/git-mirror-action@master
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
       with:
-        #  需要被同步的源端账户名，如github/phpdragon，表示Github的phpdragon账户。
-        src: github/holzora
-        # 需要同步到的目的端账户名，如gitee/phpdragon，表示Gitee的phpdragon账户。
-        dst: gitee/holzora
-        # 用于目的端上传代码的SSH key，用于上传代码
-        dst_key: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
-        # 创建仓库的API tokens， 用于自动创建不存在的仓库
-        dst_token: ${{ secrets.GITEE_PRIVATE_TOKEN }}
-        account_type: user
-        # 指定目录cache
-        cache_path: /github/workspace/phpdragon-cache
-        # 白名单，仅同步白名单中的repos，如“repo1,repo2,repo3”
-        white_list: "holzora.github.io"
-        # 仅同步静态列表，不会再动态获取需同步列表（黑白名单机制依旧生效）
-        static_list: "holzora.github.io"
-        # 强制更新
-        force_update: true
-        # clone方式，使用https、ssh方式进行clone
-        clone_style: "ssh"
+        # 来源仓库
+        source-repo: "git@github.com:holzora/holzora.github.io.git"
+        # 目标仓库
+        destination-repo: "git@gitee.com:holzora/holzora.github.io.git"
+  reload-pages:
+    needs: sync
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build Gitee Pages
+        uses: yanglbme/gitee-pages-action@main
+        with:
+          # 注意替换为你的 Gitee 用户名
+          gitee-username: holzora
+          # 注意在 Settings->Secrets 配置 GITEE_PASSWORD
+          gitee-password: ${{ secrets.GITEE_PASSWORD }}
+          # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
+          gitee-repo: holzora/holzora.github.io
+          # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
+          branch: master
