--- a/.github/workflows/gitee-repos-sync.yml
+++ b/.github/workflows/gitee-repos-sync.yml
@@ -14,7 +14,7 @@ jobs:
         # 你要操作的目标仓库
         TARGET_REPO: holzora/holzora.github.io
         # 构建结果存储的分支
-        TARGET_BRANCH: main
+        TARGET_BRANCH: gh_pages
         # 要使用的构建命令
         BUILD_SCRIPT: yarn && yarn build
         # 构建结果存储目录
@@ -46,4 +46,4 @@ jobs:
           # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
           gitee-repo: holzora/holzora.github.io
           # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
-          branch: main
+          branch: gh_pages
